@@ -24,7 +24,7 @@ EXTRA_DIST = \
 # Backends
 # ========
 pkgbackenddir = $(CUPS_SERVERBIN)/backend
-pkgbackend_PROGRAMS = parallel serial
+pkgbackend_PROGRAMS = parallel serial implicitclass
 
 check_PROGRAMS = test1284
 # We need ieee1284 up and running.
@@ -43,6 +43,12 @@ serial_SOURCES = \
 	backend/serial.c
 serial_LDADD = $(CUPS_LIBS)
 serial_CFLAGS = $(CUPS_CFLAGS)
+
+implicitclass_SOURCES = \
+	backend/backend-private.h \
+	backend/implicitclass.c
+implicitclass_LDADD = $(CUPS_LIBS)
+implicitclass_CFLAGS = $(CUPS_CFLAGS)
 
 test1284_SOURCES = \
 	backend/backend-private.h \
